ui.css
titlebar {
  -webkit-app-region: drag;
  overflow: hidden;
  position: fixed;
  top: 0;
  left: 0;
  height: 23px;
  width: 100%;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

titlebar i.fa {
  -webkit-app-region: no-drag;
  margin-right: 5px;
  margin-top: 5px;
  cursor: pointer;
}

titlebar i.markdown-mark {
  -webkit-app-region: drag;
  background: url('./img/markdown-mark.svg');
  background-size: contain;
  height: 14px;
  width: 23px;
  margin-left: 7px;
  margin-right: 0;
}

titlebar .divider-vertical {
  border-right: #AAA 1px solid;
  width: 1px;
  height: 12px;
  bottom: -12px;
  float: right;
  position: relative;
}

container {
  float: left;
  position: fixed;
  top: 27px;
  bottom: 0;
  right: 0;
  left: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 980px;
}

container:after {
  content: '';
  position: absolute;
  background: #fff;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

content  {
  -webkit-app-region: no-drag;
  position: absolute;
  background: rgb(255, 255, 255);
  overflow-wrap: break-word;
  padding: 7px 7px 7px 7px;
  bottom: 0;
  overflow: auto;
  top: 0;
  width: 98%;
}

::-webkit-scrollbar {
  width: 7px;
  height: 7px;
  background: rgba(99, 99, 99, 0.3);
}

::-webkit-scrollbar-thumb:vertical {
  border-radius: 15px;
}

::-webkit-scrollbar-thumb:horizontal {
  border-radius: 5px;
}

